# mapa-streamlit

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
mapa_streamlit/: app.py  cleaning.py  settings.py  verification.py
tests/: test_cleaning.py  test_mapa_streamlit.py  test_verification.py
tests/browser_tests/: conftest.py  test_app.py
