[tool.poetry]
name = "mapa-streamlit"
version = "0.7.1"
description = "Streamlit web app ðŸŽˆ for creating 3D-printable models of the earth ðŸŒ surface based on mapa"
authors = ["Fabian Gebhart"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

# Note: always export as requirements.txt when updating the dependencies to ensure streamlit cloud works, using
# poetry export --without-hashes > requirements.txt

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
streamlit = "^1.7.0"
streamlit-folium = "^0.6.5"
mapa = "^0.10.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
selenium = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target_version = ["py38"]
line-length = 121

[tool.isort]
multi_line_output = 3
line_length = 121
include_trailing_comma = true
