[tool.poetry]
name = "mapa-streamlit"
version = "0.8.1"
description = "Streamlit web app ðŸŽˆ for creating 3D-printable models of the earth ðŸŒ surface based on mapa"
authors = ["Fabian Gebhart"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

# Note: always export as requirements.txt when updating the dependencies to ensure streamlit cloud works, using
# poetry export --without-hashes > requirements.txt

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.20.0"
streamlit-folium = "^0.11.1"
mapa = "^0.13.0"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^2.17.0"
selenium = "^4.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
